Therion 5.4.5 (in progress):


--------------------------------------------------------------------------------

Therion 5.4.4 (2019-05-01):

therion:
 * support for Proj 5.0 and newer API (proj.h)
 * bugs fixed:
   - segfault while generating SVG when compiled by newer g++
   - incorrect EPSG projections handling if more than one EPSG codes are used
   - custom projection name missing
   - missing Proj4 human readable projection names

--------------------------------------------------------------------------------

Therion 5.4.3 (2019-02-01):

therion:
 * input line length increased to allow reading larger elevation datasets
 * built-in Proj.4 removed; internal mapping of EPSG and ESRI codes replaced
   by +init=epsg|esri:... libproj initialization string
 * bugs fixed:
   - add and use PROJ grid files in the windows distribution
   - fix comment and code typos [PR#127]

--------------------------------------------------------------------------------

Therion 5.4.2 (2019-01-08):

therion:
 * added -color option to select command
 * added lookup command to configuration
 * support for 3D models generated from splay shots
 * added support for label customization
 * added scrap distortions to SQL export
 * therion uses system libproj by default [PR#118,121]
 * metapost output is reproducible now [PR#117]
 * updated Spanish, German, Russian, Bulgarian, Portuguese, Catalan, French,
   Czech and English translations and messages
   [PR#77,78,82,83,94,95,102,103,105,107,108,109,112]
 * thbook updates [PR#76,98]
 * bugs fixed:
   - KML with multiple outer polygon outlines
   - other minor bugfixes

xtherion:
 * support for scrap shifting
 * bugs fixed:
   - fix problems with selection/copy/paste for text editors [PR#86]
   - mouse zooming fixed
   - disappearing menu fixed

loch:
 * bugs fixed:
   - displaying LRUD envelope for surface & splay shots
   - surface transparency rendering

--------------------------------------------------------------------------------
