@@ -1,0 +1,19 @@
+encoding  utf-8
+
+source cave.th
+
+#!FILE 5
+#! In the case, you need to print map with all passages
+#! in their original position (i.e. disable all offsets
+#! again and have m3 below m2 below m1)
+#! just use
+
+#!CODE
+maps-offset off
+#!ENDCODE
+
+#! in your configuration file. You do not need to edit
+#! offset specification in maps.
+
+input thconfig.layout
+
