@@ -172,6 +172,18 @@ Works like |input| command in data files---includes other files.
 \enddescription
 
 \syntax
+  |maps-offset <on/off>|
+\endsyntax
+
+\subsubchapter `maps-offset'.
+
+\description
+  Turns drawing maps in offset on (default) or off. If you turn if off, 
+  all cave passages will be displayed in detail in their actual position.
+  All offset specifications will be completely ignored.
+\enddescription
+
+\syntax
   |maps <on/off>|
 \endsyntax
 
