@@ -1,5 +1,6 @@
 Therion 5.4.5 (in progress):
-
+therion:
+ * maps-offset <on|off> feature in thconfig file to disable maps drawn in offset
 
 --------------------------------------------------------------------------------
 
